feat: Batch endpoint to get communities by id where user is member
